<resources>
    <string name="app_name">Condroid</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="next_button">Next</string>
    <string name="content_description">This is app logo</string>
    <string name="contact_text">Enter Phone Numbers of your trusted contacts</string>
    <string name="enter_1st_phone_number">Enter 1st Phone Number</string>
    <string name="enter_2nd_phone_number">Enter 2nd Phone Number</string>
    <string name="enter_3rd_phone_number">Enter 3rd Phone Number</string>
    <string name="enter_4th_phone_number">Enter 4th Phone Number</string>
    <string name="submitBtn">Submit</string>
    <string name="commands">COMMANDS</string>
    <string name="msg_content"><![CDATA[Msg should contain: <password>#<command>\nPassword should match, and command can be any of the following:]]></string>
    <string name="command_list"><![CDATA[1. Wifi: turn on/off wifi\n2. Ring phone: ring\n3. Change audio modes:\n\t\tsilent mode/vibrate mode/general mode\n4. Data: turn on data\n5. Bluetooth: turn on/off bluetooth\n6. Flashlight: turn on/off flash\n7. Call: call <number>\n\nExample: passwd123#ring\n\nThe app will run in background, please close the app to save power!]]></string>
</resources>
