<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.roshan.condroid.Help"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/help"
        android:text="@string/commands"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:padding="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/msgContent"
        android:layout_below="@+id/help"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/msg_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commands"
        android:layout_below="@+id/msgContent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/command_list"
        />

</RelativeLayout>
